--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,6 @@
         <version>1.1.10</version>
       </dependency>
 
-      <!--<dependency>-->
-        <!--<groupId>com.mchange</groupId>-->
-        <!--<artifactId>c3p0</artifactId>-->
-        <!--<version>0.9.5.2</version>-->
-      <!--</dependency>-->
-
       <!-- MyBatis -->
       <dependency>
         <groupId>org.mybatis</groupId>
@@ -93,6 +87,12 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
         <version>${spring.version}</version>
+        <exclusions>
+          <exclusion>
+            <artifactId>commons-logging</artifactId>
+            <groupId>commons-logging</groupId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -114,11 +114,11 @@
         <artifactId>spring-tx</artifactId>
         <version>${spring.version}</version>
       </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
+      <!--<dependency>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-web</artifactId>-->
+        <!--<version>${spring.version}</version>-->
+      <!--</dependency>-->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
@@ -129,12 +129,6 @@
         <artifactId>spring-test</artifactId>
         <version>${spring.version}</version>
       </dependency>
-
-     <!-- <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>1.16.14</version>
-      </dependency>-->
 
   </dependencies>
 
